--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     </header>
 
     <main>
+        <section id="container">
+            <article id="conteudo">
+                
+            </article>
+        </section>
         <h1>Aprendendo a usar o Github</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis provident maxime asperiores labore. Nesciunt itaque autem rem quod necessitatibus quasi, voluptatibus adipisci laudantium libero placeat ullam repellat neque soluta dolores.</p>
         <h2 id="beneficios">Benefícios</h2>
